2003-05-12  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/sane-backends.fr.po: Updated french translation (from Yann
	  E. MORIN <yann dot morin dot 1998 at anciens dot enib dot fr>).

2003-05-11  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* backend/mustek_pp.[ch]: Offset correction for Mustek 600CP and
	  added some debugging code.

2003-05-09  Rene Rebe <rene.rebe@gmx.net>

	* doc/sane-avision.man: fix tiny typo

2003-05-08  Rene Rebe <rene.rebe@gmx.net>

	* backend/avision.c doc/sane-avision.man
	  doc/descriptions/avision.desc: update to the latest avision
	  backend including the fix for segmentation fault when no config
	  file is present.

2003-05-08  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* acinclude.m4 aclocal.m4 configure include/sane/config.h.in:
	  Added missing HAVE_LIBIEEE1284 macro. The test was there, but
	  the macro wasn't set.
	* po/sane-backends.de.po: Added some missing translations.
	* po/sane-backends.es.po po/sane-backends.fr.po po/sane-backends.nl.po
	  po/sane-backends.no.po po/sane-backends.pt.po po/sane-backends.ru.po
	  po/sane-backends.sv.po: Updated for latest backend changes.
	* backend/hp5400.c backend/hp5400.h backend/hp5400_internal.c
	  backend/hp5400_sanei.c backend/hp5400_xfer.h: Changed license to
	  GPL + SANE exception.

2003-05-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/Makefile.in po/sane-backends.no.po: Added Norwegian
	  translation (from Sigurd Stordal <sigurd.stordal@stud.ibg.uit.no>). 

2003-05-06  Michael Herder <crapsite@gmx.net>

        * doc/descriptions/artec_eplus48u.desc:
          Added comment about different product ID of MEM 48U
        * backend/artec_eplus48u.conf:
          Added new model Memorex MEM 48U

2003-05-05 Oliver Rauch <Oliver.Rauch@XSane.org>
	* backend/umax.c: solved bug that broke compilation for OS2

2003-05-05  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/sane-backends.fr.po: Updates for the French translation from